# 10-days-of-grad

./: .gitignore  CITATION.cff  README.md
day1/: Iris.hs  README.md
day10/: CartPole.hs  Lib.hs  Ppo.hs  Reinforce.lhs  project.cabal
day2/: Main.hs  NeuralNetwork.hs  README.md  run.sh
day3/: README.md  haskell-guide-to-neural-networks.lhs
day4/: README.md  batchnorm.cabal  run.sh  stack.yaml
day4/app/: Main.hs
day4/src/: NeuralNetwork.hs
day5/: README.md  TODO  conv.cabal  package.yaml  run.sh  stack.yaml
day5/app/: Main.hs
day5/bench/: Main.hs  conv2d-numpy.py  conv2d-pytorch.py
day5/src/: NeuralNetwork.hs  Shuffle.hs  Weights.hs
day6/: README.md  TODO  bnn.cabal  package.yaml  run.sh  stack.yaml
day6/app/: Main.hs
day6/src/: NeuralNetwork.hs
day7/: MNIST.ipynb  README.md
day8/: README.md  Uncertainty.ipynb  download.sh
day9/: README.md  download.sh  vae.hs  vaeCnn.hs
day9/data/cnn/: latent_space_beta_0_z10.txt  latent_space_beta_1_z10.txt  latent_space_beta_4.txt  latent_space_beta_4_z10.txt  visualize.ipynb
day9/data/mlp/: VAE-Aug2022-beta_0.ht  VAE-Aug2022-beta_1.ht  VAE-Aug2022-beta_4.ht  visualize.ipynb
massiv/: massiv-nn.cabal  stack.yaml
massiv/app/: Day1.hs  Day2.hs
massiv/src/: NeuralNetwork.hs
ocaml/iris/: README.md  dune-project
ocaml/iris/lib/: dune
ocaml/iris/test/: dune
